# eustatspy

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  NEWS.md  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
LICENSES/: README.md
eustatspy/: __init__.py  catalogue.py  client.py  exceptions.py  models.py  statistics.py  utils.py
tests/: README.md  conftest.py  test_catalogue.py  test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_statistics.py  test_utils.py
tutorials/: EuStatsPy - Get started.ipynb
